# roc

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli_run.rs
crates/cli/tests/cli/: ingested-file-bytes-no-ann.roc  ingested-file-bytes.roc
crates/compiler/builtins/bitcode/src/: list.zig  main.zig
crates/compiler/builtins/src/: bitcode.rs
crates/compiler/can/src/: builtins.rs  expr.rs
crates/compiler/gen_dev/src/: lib.rs
crates/compiler/gen_llvm/src/llvm/: build.rs  lowlevel.rs
crates/compiler/gen_wasm/src/: low_level.rs
crates/compiler/load_internal/src/: docs.rs  file.rs  module.rs  module_cache.rs
crates/compiler/load_internal/tests/: test_load.rs
crates/compiler/module/src/: low_level.rs
crates/compiler/mono/src/: drop_specialization.rs  inc_dec.rs
crates/compiler/test_solve_helpers/src/: lib.rs
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs
crates/glue/src/: RustGlue.roc  load.rs
crates/glue/src/roc_type/: mod.rs
crates/roc_std/src/: lib.rs
crates/transformer/: Cargo.toml  main.roc  main.roc.tr.roc
crates/transformer/src/: analysis.rs  transform.rs
crates/transformer/src/analysis/: parse_ast.rs
examples/: helloWorld.roc
examples/breakout/: Cargo.toml
examples/breakout/host/graphics/primitives/: text.rs
examples/breakout/platform/: Elem.roc
examples/gui/breakout/platform/src/: roc.rs
examples/static-site-gen/: Cargo.toml  README.md
examples/static-site-gen/host/: lib.rs
examples/static-site-gen/input/: banana.md
